--- a/client/style.sass
+++ b/client/style.sass
@@ -3,7 +3,7 @@
 
 $main-margin: 30px
 $main-padding: 15px
-$msg-padding: 15px 20px
+$msg-padding: 12px 20px
 $msg-margin: 12px
 $blue: #008bf7
 $blue-dimmed: #0074ce
@@ -35,6 +35,32 @@ html, body
       .accent
         font-weight: 800
         display: block
+    .welcome-modal
+      position: fixed
+      width: 100%
+      height: 100%
+      background: rgba(249, 248, 253, 0.95)
+      z-index: 1
+      display: flex
+      justify-content: center
+      align-items: center
+      .welcome-container
+        max-width: 350px
+        padding: 15px
+        text-align: left
+        form
+          input
+            width: 100%
+            border: none
+            flex: 1
+            padding: $input-padding
+            color: black
+            font-size: 0.9rem
+            font-weight: 400
+            &::placeholder
+              color: black
+              opacity: 0.2
+              font-weight: 500
     aside
       background: rgba(249, 248, 253, 0.6)
       width: 300px
@@ -43,7 +69,7 @@ html, body
       flex-direction: column
       justify-content: space-between
       .credits
-        font-weight: 0.45rem
+        font-size: 0.85rem
         opacity: 0.65
     main
       background: rgba(249, 248, 253, 0.9)
@@ -58,29 +84,36 @@ html, body
         font-size: 1.5rem
         font-weight: 700
         border-bottom: 1px solid #0000000f
-      .msg-container
+      .msg-feed
         flex: 1
         display: flex
         flex-direction: column
         overflow-y: scroll
         padding: $main-padding 0
-        .msg
-          background: $grey
-          color: black
-          padding: $msg-padding
-          border-radius: $radius
-          margin-bottom: $msg-margin
-          width: auto
+        .msg-container
           align-self: flex-start
           max-width: 80%
+          width: auto
           word-wrap: break-word
-          font-weight: 400
-          font-size: 0.95rem
-          line-height: 1.45
+          margin-bottom: $msg-margin
+          .msg-sender
+            font-size: 0.85rem
+            font-weight: 500
+            margin: 0 0 5px 25px
+            opacity: 0.5
+          .msg
+            background: $grey
+            color: black
+            padding: $msg-padding
+            border-radius: $radius
+            font-weight: 400
+            font-size: 0.95rem
+            line-height: 1.45
           &.me
-            background: $blue
-            color: white
             align-self: flex-end
+            .msg
+              background: $blue
+              color: white
       .input-container
         background-color: white
         box-shadow: 0 2px 2px 1px #00000006
