--- a/client/style.sass
+++ b/client/style.sass
@@ -89,6 +89,7 @@ html, body
         display: flex
         flex-direction: column
         overflow-y: scroll
+        -webkit-overflow-scrolling: touch
         padding: $main-padding 0
         .msg-container
           align-self: flex-start
