--- a/client/style.sass
+++ b/client/style.sass
@@ -1,18 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900&display=swap')
 @import "./node_modules/material-design-icons/iconfont/material-icons.css"
 
-$main-margin: 30px
-$main-padding: 15px
-$msg-padding: 12px 20px
-$msg-margin: 12px
 $blue: #008bf7
 $blue-dimmed: #0074ce
 $grey: #ebe9f1
 $grey-light: #ececec
-$radius: 25px
-$input-padding: 20px 15px
 
 *
+  box-sizing: border-box
   &:focus, &:active
     outline: none
     border: 0
@@ -53,7 +48,7 @@ html, body
             width: 100%
             border: none
             flex: 1
-            padding: $input-padding
+            padding: 20px 15px
             color: black
             font-size: 0.9rem
             font-weight: 400
@@ -61,10 +56,32 @@ html, body
               color: black
               opacity: 0.2
               font-weight: 500
+          .welcome-submit
+            background-color: $blue
+            color: white
+            display: flex
+            border: none
+            border-radius: 25px
+            justify-content: center
+            align-items: center
+            box-shadow: 0 2px 6px 2px #00477d30
+            transition: all 250ms
+            padding: 10px 20px
+            font-size: 0.85rem
+            font-weight: 500
+            margin-top: 20px
+            &:hover
+              cursor: pointer
+            &:enabled:active
+              background-color: $blue-dimmed
+              box-shadow: 0 2px 6px 2px #00477d4a
+              transform: translate(0, 1px)
+            &:disabled
+              opacity: 0.45
     aside
       background: rgba(249, 248, 253, 0.6)
       width: 300px
-      padding: $main-padding
+      padding: 15px
       display: flex
       flex-direction: column
       justify-content: space-between
@@ -76,11 +93,11 @@ html, body
       flex: 1
       display: flex
       flex-direction: column
-      padding: $main-margin
+      padding: 30px
       header
         margin: 0
         padding: 0
-        padding-bottom: $main-padding
+        padding-bottom: 15px
         font-size: 1.5rem
         font-weight: 700
         border-bottom: 1px solid #0000000f
@@ -90,23 +107,23 @@ html, body
         flex-direction: column
         overflow-y: scroll
         -webkit-overflow-scrolling: touch
-        padding: $main-padding 0
+        padding: 15px
         .msg-container
           align-self: flex-start
           max-width: 80%
           width: auto
           word-wrap: break-word
-          margin-bottom: $msg-margin
+          margin-bottom: 5px
           .msg-sender
             font-size: 0.85rem
             font-weight: 500
-            margin: 0 0 5px 25px
+            margin: 5px 0 5px 15px
             opacity: 0.5
           .msg
             background: $grey
             color: black
-            padding: $msg-padding
-            border-radius: $radius
+            padding: 10px 20px
+            border-radius: 25px
             font-weight: 400
             font-size: 0.95rem
             line-height: 1.45
@@ -126,7 +143,7 @@ html, body
           input
             border: none
             flex: 1
-            padding: $input-padding
+            padding: 20px 15px
             color: black
             font-size: 0.9rem
             font-weight: 400
@@ -139,7 +156,7 @@ html, body
             color: white
             width: 40px
             height: 40px
-            margin: 0 $msg-margin
+            margin: 0 12px
             display: flex
             border: none
             border-radius: 50%
