--- a/client/style.sass
+++ b/client/style.sass
@@ -5,6 +5,9 @@ $blue: #008bf7
 $blue-dimmed: #0074ce
 $grey: #ebe9f1
 $grey-light: #ececec
+$dark-blue: #494e58
+$rose-alert: #fa4751
+$green-ok: #7cd62c
 
 *
   box-sizing: border-box
@@ -19,6 +22,7 @@ html, body
   font-family: 'Catamaran', sans-serif
   font-size: 16px
   height: 100%
+  color: $dark-blue
   #root
     display: flex
     flex-direction: row
@@ -27,9 +31,12 @@ html, body
       font-size: 2rem
       font-weight: 400
       line-height: 1
+      color: black
       .accent
         font-weight: 800
         display: block
+    h2
+      color: black
     .welcome-modal
       position: fixed
       width: 100%
@@ -49,11 +56,11 @@ html, body
             border: none
             flex: 1
             padding: 20px 15px
-            color: black
+            color: $dark-blue
             font-size: 0.9rem
             font-weight: 400
             &::placeholder
-              color: black
+              color: $dark-blue
               opacity: 0.2
               font-weight: 500
           .welcome-submit
@@ -88,19 +95,44 @@ html, body
       .credits
         font-size: 0.85rem
         opacity: 0.65
+      .server-title
+        padding: 0
+        margin: 0
+      .server-url
+        font-size: 0.8rem
+      .server-status
+        padding: 5px 0
+        margin: 0
+        font-size: 0.85rem
+        span
+          background: grey
+          width: 10px
+          height: 10px
+          border-radius: 50%
+          display: inline-block
+          margin-right: 5px
+          transition: all 250ms
+          &.online
+            background: $green-ok
+          &.offline
+            background: $rose-alert
     main
       background: rgba(249, 248, 253, 0.9)
       flex: 1
       display: flex
       flex-direction: column
       padding: 30px
+      min-width: 0
       header
         margin: 0
         padding: 0
         padding-bottom: 15px
-        font-size: 1.5rem
+        font-size: 1.25rem
         font-weight: 700
         border-bottom: 1px solid #0000000f
+        white-space: nowrap
+        overflow: hidden
+        text-overflow: ellipsis
       .msg-feed
         flex: 1
         display: flex
@@ -121,7 +153,7 @@ html, body
             opacity: 0.5
           .msg
             background: $grey
-            color: black
+            color: $dark-blue
             padding: 10px 20px
             border-radius: 25px
             font-weight: 400
@@ -144,11 +176,11 @@ html, body
             border: none
             flex: 1
             padding: 20px 15px
-            color: black
+            color: $dark-blue
             font-size: 0.9rem
             font-weight: 400
             &::placeholder
-              color: black
+              color: $dark-blue
               opacity: 0.2
               font-weight: 500
           .btn-send
