--- a/client/style.sass
+++ b/client/style.sass
@@ -102,7 +102,7 @@ html, body
       .server-url
         font-size: 0.8rem
       .server-status
-        padding: 5px 0
+        padding: 6px 0 0 0
         margin: 0
         font-size: 0.85rem
         span
